# majordomo

./: .gitignore
bindings/ruby/ext/majordomo/: client.c  client.h  extconf.rb  prelude.h  worker.c  worker.h
libmdp/: .gitignore  CMakeLists.txt  FindCZMQ.cmake  FindZeroMQ.cmake  libmdp.pc.in
libmdp/include/: CMakeLists.txt  mdp.h  mdp_client.h
libmdp/src/: CMakeLists.txt  mdp_client.c
